fixed positing of delete image inside accordion body: although the styling was done on deleteComment component by deleting MUI button-caused spacing issue:

--- a/react-app/src/components/Accordion.css
+++ b/react-app/src/components/Accordion.css
@@ -33,9 +33,7 @@
 .accordion-wrapper[cs-state='open'] .caret-icon {
     transform: rotate(180deg);
 }
-.caret-icon{
-    
-}
+
 .accordion-body {
     padding: 1rem;
     display: flex;
